fix: styles and content overflow

--- a/src/app/features/suggestions/components/lists/lists.component.scss
+++ b/src/app/features/suggestions/components/lists/lists.component.scss
@@ -19,11 +19,12 @@ header {
 
   .container {
     @include flex(row, flex-start, center);
-    gap: 2rem;
+    gap: 1rem;
   }
-
+  
   .item-count, .sort {
-    @extend .container;
+    @include flex(row, flex-start, center);
+    gap: 0.5rem;
   }
 
   p {
@@ -39,4 +40,7 @@ header {
 .suggestions {
   @include flex(column);
   gap: 1rem;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
