--- a/src/app/features/suggestions/pages/suggestions/suggestions.component.scss
+++ b/src/app/features/suggestions/pages/suggestions/suggestions.component.scss
@@ -6,5 +6,5 @@
   gap: 2rem;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
